WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151402
[WK2][Cache] We should not speculatively revalidate transient resources
https://bugs.webkit.org/show_bug.cgi?id=151402
Summary
[WK2][Cache] We should not speculatively revalidate transient resources
Chris Dumez
Reported
2015-11-18 13:32:09 PST
We should not speculatively revalidate transient resources and avoid unnecessary network requests.
Attachments
WIP Patch
(15.13 KB, patch)
2015-11-18 13:33 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(15.48 KB, patch)
2015-11-18 23:38 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(17.77 KB, patch)
2015-11-19 16:39 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(18.25 KB, patch)
2015-11-20 14:28 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-11-18 13:33:22 PST
Created
attachment 265773
[details]
WIP Patch
WebKit Commit Bot
Comment 2
2015-11-18 13:35:45 PST
Attachment 265773
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.h:63: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:131: More than one command on the same line in if [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:316: Should have a space between // and comment [whitespace/comments] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:322: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:361: Should have a space between // and comment [whitespace/comments] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSubresourcesEntry.h:47: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 6 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3
2015-11-18 23:38:46 PST
Created
attachment 265851
[details]
WIP Patch
WebKit Commit Bot
Comment 4
2015-11-18 23:41:01 PST
Attachment 265851
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:156: More than one command on the same line in if [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:354: Should have a space between // and comment [whitespace/comments] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:359: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.h:61: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSubresourcesEntry.h:47: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 5 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 5
2015-11-19 16:39:43 PST
Created
attachment 265918
[details]
Patch
WebKit Commit Bot
Comment 6
2015-11-19 16:41:20 PST
Attachment 265918
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:156: More than one command on the same line in if [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:359: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.h:61: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSubresourcesEntry.h:47: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 7
2015-11-20 14:28:51 PST
Created
attachment 265999
[details]
Patch
WebKit Commit Bot
Comment 8
2015-11-20 14:30:11 PST
Attachment 265999
[details]
did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:159: More than one command on the same line in if [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.cpp:362: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSpeculativeLoadManager.h:61: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheSubresourcesEntry.h:47: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 9
2015-11-20 14:30:41 PST
<
rdar://problem/23092196
>
WebKit Commit Bot
Comment 10
2015-11-30 11:06:27 PST
Comment on
attachment 265999
[details]
Patch Clearing flags on attachment: 265999 Committed
r192807
: <
http://trac.webkit.org/changeset/192807
>
WebKit Commit Bot
Comment 11
2015-11-30 11:06:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug